@@ -644,31 +644,61 @@ def find(s):
            ]
 
 def align_to_object(s):
-   list = cmd.get_names("public_objects")
-   list = list[0:30] # keep this practical
+   list = cmd.get_names("public_objects",1)[0:25] # keep this practical
+   list = filter(lambda x:cmd.get_type(x)=="object:molecule",list)
    result = [[ 2, 'Object:', '']]
    for a in list:
       if a!=s:
          result.append([1,a,
                         'cmd.align("polymer and name ca and ('+s+')",'+
-                        '"polymer and name ca and ('+a+')",max_gap=50,quiet=0);cmd.center("'+s+'",animate=-1)'])
+                        '"polymer and name ca and ('+a+')",max_gap=50,quiet=0)'])
    return result
 
 def align_to_sele(s):
-   list = cmd.get_names("public_selections")
-   list = list[0:30] # keep this practical
+   list = cmd.get_names("public_selections",0)[0:25] # keep this practical
    result = [[ 2, 'Selection:', '']]
    for a in list:
       if a!=s:
          result.append([1,a,
                         'cmd.align("polymer and name ca and ('+s+')",'+
-                        '"polymer and name ca and ('+a+')",max_gap=50,quiet=0);cmd.center("'+s+'",animate=-1)'])
+                        '"polymer and name ca and ('+a+')",max_gap=50,quiet=0)'])
    return result
 
-def align(s):
+def mat_tran(s,direction=0):
+   list = cmd.get_names("public_objects",1)[0:25] # keep this practical
+   list = filter(lambda x:cmd.get_type(x)=="object:molecule",list)
+   result = [[ 2, 'Object:', '']]
+   for a in list:
+      if a!=s:
+         if direction:
+            result.append([1,a,
+                           'cmd.matrix_transfer("'+a+'","'+s+'");'])
+         else:
+            result.append([1,a,
+                           'cmd.matrix_transfer("'+s+'","'+a+'");'])
+   return result
+
+
+def sele_align(s):
    return [[ 2, 'Align:', ''],
-           [ 1, 'to object', align_to_object(s) ],
-           [ 1, 'to object', align_to_sele(s) ],           
+           [ 1, 'to molecule', align_to_object(s) ],
+           [ 1, 'to selection', align_to_sele(s) ],
+           [ 0, '', None ],
+           [ 1, 'enabled to this', 'util.mass_align("'+s+'",1)' ],                                 
+           [ 1, 'all to this', 'util.mass_align("'+s+'",0)' ],                      
+           ]
+
+def mol_align(s):
+   return [[ 2, 'Align:', ''],
+           [ 1, 'to molecule', align_to_object(s) ],
+           [ 1, 'to selection', align_to_sele(s) ],
+           [ 0, '', None ],
+           [ 1, 'enabled to this', 'util.mass_align("'+s+'",1)' ],                                 
+           [ 1, 'all to this', 'util.mass_align("'+s+'",0)' ],
+           [ 0, '', None ],
+           [ 1, 'matrix from', mat_tran(s,1) ],
+           [ 1, 'matrix to', mat_tran(s,0) ],
+           [ 1, 'matrix reset', 'cmd.matrix_reset("'+s+'")'],
            ]
 
 def sele_action(s):
@@ -683,7 +713,7 @@ def sele_action(s):
            [ 0, ''               ,''                             ],
            [ 1, 'preset'         ,presets(s)         ],
            [ 1, 'find', find(s) ],
-           [ 1, 'align', align(s) ],           
+           [ 1, 'align', sele_align(s) ],           
            [ 0, ''               ,''                             ],
            [ 1, 'remove atoms'   ,'cmd.remove("'+s+'");cmd.delete("'+s+'")'          ],
            [ 0, ''               ,''                             ],
@@ -736,7 +766,7 @@ def mol_action(s):
            [ 0, ''          ,''                                              ],
            [ 1, 'preset'  ,   presets(s)       ],
            [ 1, 'find',     find(s) ],
-           [ 1, 'align',     align(s) ],                      
+           [ 1, 'align',     mol_align(s) ],                      
            [ 1, 'generate'  ,   mol_generate(s)       ],           
            [ 0, ''               ,''                             ],
            [ 1, 'assign sec. struc.'  ,'cmd.dss("'+s+'")'        ],
