@@ -4,6 +4,11 @@ CHANGE LOG
 
 Changes up to 0.99
 
+   beta03
+
+   * fixed serious race condition / threading bug in popup menus -- this
+   explains & eliminate the sporadic crashes observed on smp machines
+
    beta02
 
    * fixed broken reading of multistate objects from strings
